<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abadarau.quizzer.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/quiz_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/question1_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_question1_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:labelFor="@+id/et_question1_answer"
                    android:text="@string/question_1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="14sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/et_question1_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapCharacters|textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question2_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_question2_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/question2"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:typeface="monospace" />

                <RadioGroup
                    android:id="@+id/rg_question2_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/question3_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_question3_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/question3"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:typeface="monospace" />

                <RadioGroup
                    android:id="@+id/rg_question3_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/question4_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_question4_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/question4"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:typeface="monospace" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_text" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
